--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "sass-loader": "^10.4.1",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.7",
+    "@types/node": "^18.15.11",
+    "pinia": "^2.0.33"
   }
 }
