--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
+    "deploy": "gh-pages --dotfiles -d .output/public",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.7",
     "@types/node": "^18.15.11",
+    "gh-pages": "^5.0.0",
     "pinia": "^2.0.33"
   }
 }
